--- a/src/modules/Dashboard/Dashboard.scss
+++ b/src/modules/Dashboard/Dashboard.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-.login {
+.main {
   &-wrapper {
     width: 100%;
     background: #20212E;
@@ -88,38 +88,51 @@
     align-items: center;
     position: relative;
     z-index: 2;
-    .choose {
-      margin-bottom: 30px;
-      display: flex;
-     span {
-       font-family: Montserrat;
-       font-style: normal;
-       font-weight: 900;
-       font-size: 30px;
-       display: flex;
-       align-items: center;
-       color: #FFFFFF;
-       margin: 0 15px;
-     }
-      .signin {
-        font-family: Montserrat;
-        font-style: normal;
-        font-weight: 900;
-        font-size: 30px;
-        display: flex;
-        align-items: center;
-        color: #FFFFFF;
-        cursor: pointer;
+    &__title {
+      font-family: Montserrat;
+      font-style: normal;
+      font-weight: 900;
+      font-size: 50px;
+      line-height: 64px;
+      color: #FFFFFF;
+      text-align: center;
+      .inside-text {
+        position: relative;
+         span {
+           position: relative;
+           z-index: 2;
+         }
+        &:before {
+          content: '';
+          position: absolute;
+          left:7%;
+          bottom: 5px;
+          width: 100%;
+          max-width: 365px;
+          height: 15px;
+          background: #BC181E;
+          z-index: 1;
+        }
       }
-      .signup {
-        font-family: Montserrat;
-        font-style: normal;
-        font-weight: 900;
-        font-size: 30px;
-        display: flex;
-        align-items: center;
+    }
+    &__link {
+      margin-top: 50px;
+      background: #BC181E;
+      font-family: Raleway;
+      font-style: normal;
+      font-weight: bold;
+      font-size: 20px;
+      display: flex;
+      align-items: center;
+      color: #FFFFFF;
+      text-decoration: none;
+      padding: 15px 30px;
+      border: 2px solid transparent;
+      transition: border 0.3s ease, background 0.3s ease;
+      &:hover {
+        border: 2px solid #FFFFFF;
+        background: transparent;
         color: #FFFFFF;
-        cursor: pointer;
       }
     }
   }
