--- a/src/modules/Dashboard/Dashboard.scss
+++ b/src/modules/Dashboard/Dashboard.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-.main {
+.dashboard {
   &-wrapper {
     width: 100%;
     background: #20212E;
@@ -83,56 +83,80 @@
     max-width: 1440px;
     width: 100%;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     position: relative;
     z-index: 2;
-    &__title {
-      font-family: Montserrat;
-      font-style: normal;
-      font-weight: 900;
-      font-size: 50px;
-      line-height: 64px;
-      color: #FFFFFF;
-      text-align: center;
-      .inside-text {
-        position: relative;
-         span {
-           position: relative;
-           z-index: 2;
-         }
-        &:before {
-          content: '';
-          position: absolute;
-          left:7%;
-          bottom: 5px;
-          width: 100%;
-          max-width: 365px;
-          height: 15px;
-          background: #BC181E;
-          z-index: 1;
-        }
-      }
+    padding-top: 50px;
+    .left {
+      width: 50%;
     }
-    &__link {
-      margin-top: 50px;
-      background: #BC181E;
-      font-family: Raleway;
-      font-style: normal;
-      font-weight: bold;
-      font-size: 20px;
+    .right {
+      width: 50%;
       display: flex;
+      flex-direction: column;
       align-items: center;
-      color: #FFFFFF;
-      text-decoration: none;
-      padding: 15px 30px;
-      border: 2px solid transparent;
-      transition: border 0.3s ease, background 0.3s ease;
-      &:hover {
-        border: 2px solid #FFFFFF;
+      background: #FFFFFF;
+      padding: 20px;
+      border-radius: 30px;
+      .title {
+        font-family: Montserrat;
+        font-style: normal;
+        font-weight: 800;
+        font-size: 30px;
+        line-height: 34px;
+      }
+      input {
+        width: 650px;
+        height: 42px;
         background: transparent;
+        border: none;
+        border: 2px solid #20212E;
+        outline: none;
+        font-family: Montserrat;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 20px;
+        line-height: 60px;
+        border-radius: 30px;
+        padding-left: 30px;
+        margin:20px 0;
+      }
+      textarea {
+        width: 650px;
+        max-width: 100%;
+        border: 2px solid #20212E;
+        outline: none;
+        font-family: Raleway;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 20px;
+        line-height: 60px;
+        border-radius: 30px;
+        padding-left: 30px;
+      }
+      button {
+        margin-top: 30px;
+        font-family: Raleway;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        max-width: 200px;
         color: #FFFFFF;
+        background: #BC181E;
+        padding: 20px 50px;
+        border: none;
+        outline: none;
+        cursor: pointer;
+        border: 2px solid transparent;
+        transition: border 0.3s ease, background 0.3s ease;
+        &:hover {
+          border: 2px solid #FFFFFF;
+          background: black;
+          color: #FFFFFF;
+        }
       }
     }
   }
