--- a/src/modules/Dashboard/Dashboard.scss
+++ b/src/modules/Dashboard/Dashboard.scss
@@ -81,6 +81,7 @@
   }
   &-container {
     max-width: 1440px;
+    padding: 0 40px;
     width: 100%;
     display: flex;
     align-items: flex-start;
@@ -89,9 +90,14 @@
     padding-top: 50px;
     .left {
       width: 50%;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end;
+      margin-right: 30px;
     }
     .right {
       width: 50%;
+      max-width: 450px;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -106,7 +112,7 @@
         line-height: 34px;
       }
       input {
-        width: 650px;
+        width: 400px;
         height: 42px;
         background: transparent;
         border: none;
@@ -122,7 +128,7 @@
         margin:20px 0;
       }
       textarea {
-        width: 650px;
+        width: 400px;
         max-width: 100%;
         border: 2px solid #20212E;
         outline: none;
