--- a/src/modules/Dashboard/Post/Post.scss
+++ b/src/modules/Dashboard/Post/Post.scss
@@ -8,12 +8,12 @@
     background: #FFFFFF;
     border-radius: 30px;
     padding: 30px;
-    width: 600px;
+    width: 420px;
     .top {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      .left {
+      .left-side {
         display: flex;
         align-items: center;
         .photo {
@@ -40,6 +40,10 @@
         }
       }
       .right-side {
+        display: flex;
+        div + div {
+          margin-left: 20px;
+        }
         svg {
           width: 20px;
           height: 20px;
@@ -58,6 +62,45 @@
         display: flex;
         align-items: center;
       }
+      .change-area {
+        margin: 10px 0;
+        width: 100%;
+        textarea{
+          max-width: 95%;
+          width: 100%;
+          padding:10px;
+          font-family: Montserrat;
+          font-style: normal;
+          font-weight: 400;
+          font-size: 16px;
+          line-height: 24px;
+          border-radius: 10px;
+        }
+        .button-change {
+          margin-top: 10px;
+          font-family: Raleway;
+          font-style: normal;
+          font-weight: bold;
+          font-size: 14px;
+          line-height: 16px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          max-width: 50px;
+          color: #FFFFFF;
+          background: #BC181E;
+          padding: 10px 50px;
+          outline: none;
+          cursor: pointer;
+          border: 2px solid transparent;
+          transition: border 0.3s ease, background 0.3s ease;
+          &:hover {
+            border: 2px solid #FFFFFF;
+            background: black;
+            color: #FFFFFF;
+          }
+        }
+      }
       .date-line {
         display: flex;
         justify-content: space-between;
@@ -67,7 +110,7 @@
         .date-edit {
           display: flex;
           .new-date {
-            margin: 0 20px;
+            margin: 0 10px;
           }
         }
       }
